# redditide

./: .gitignore  README.md  config.yaml  pyproject.toml  schema.prisma
migrations/20240505151323_create_post_model/: migration.sql
migrations/20240505154915_add_subreddit_to_post_model/: migration.sql
redditide/: config.py  main.py
redditide/api_clients/: discord.py  reddit.py
redditide/database/: reddit.py
tests/: conftest.py
tests/api_clients/: test_reddit.py
tests/database/: test_database.py
